--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -35,7 +35,7 @@
     <section class="pixels">
         <div class="col">
             <div class="icon">
-                <i class="fa fa-cloud" aria-hidden="true"></i>
+                <i class="fa fa-cloud" aria-hidden="true" style="color:white;"></i>
             </div>
             <div class="pixel">
                 <h3>Pixel Perfect Design</h3>
@@ -45,7 +45,7 @@
         </div>
         <div class="col">
             <div class="icon">
-                <i class="fa fa-cloud"></i>
+                <i class="fa fa-cloud" style="color:white;"></i>
             </div>
             <div class="pixel">
                 <h3>Full Documnetation</h3>
@@ -55,7 +55,7 @@
         </div>
         <div class="col">
             <div class="icon">
-                <i class="fa fa-cloud" aria-hidden="true"></i>
+                <i class="fa fa-cloud" aria-hidden="true" style="color:white;"></i>
             </div>
             <div class="pixel">
                 <h3>Reasonable Pricing</h3>
@@ -65,7 +65,7 @@
         </div>
         <div class="col">
             <div class="icon">
-                <i class="fa fa-cloud" aria-hidden="true"></i>
+                <i class="fa fa-cloud" aria-hidden="true" style="color:white;"></i>
             </div>
             <div class="pixel">
                 <h3>Happy clients</h3>
