--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -84,7 +84,7 @@
                     <p>Easy way to build perfect websites</p>
                     <h3>Smart,Curious,Hands On.</h3>
                 </div>
-                <div class="lelit">
+                <div class="para">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente id sed, adipisci asperiores
                         sequi veniam fugit dolorem aspernatur mollitia necessitatibus ab pariatur assumenda, commodi
                         quaerat maiores nam iste repellendus. At ea qui, officiis vitae libero et voluptatem illum?</p>
@@ -220,7 +220,7 @@
         </div>
     </section>
     <section class="our-products">
-        <img src="../Images/img7.jpg" alt="" width="100%" height="auto">
+        <img src="../Images/img7.jpg" alt="">
         <div class="our-products-content">
             <div class="we-value">
                 <p>We value your complaints about our services</p>
