--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website-template</title>
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
                 <p>STUDIO</p>
             </div>
             <div class="nav-icon">
-                <p><i class="fa fa-bars"></i></p>
+                <a href=""><i class="fa fa-bars"></i></a>
             </div>
         </div>
         <div class="header-content">
@@ -170,7 +171,7 @@
     </section>
     <section class="values-features">
         <div class="values">
-            <div class="values">
+            <div class="value">
                 <p>Values & Features</p>
             </div>
             <div class="value-header">
