--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -7,6 +7,7 @@
     <title>Website-template</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/mobile.css">
+    <link rel="stylesheet" href="../CSS/tablet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
